force-app/main/default/objects/Emission__c/Emission__c.object-meta.xml
<CustomObject>
    <label>Emission</label>
    <nameField>
        <displayFormat>EMI-{000}</displayFormat>
        <label>Emission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>