force-app/main/default/objects/Emission__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Waste</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>