force-app/main/default/objects/Emission__c/fields/Actual_Emission__c.field-meta.xml
<CustomField>
    <fullName>Actual_Emission__c</fullName>
    <label>Actual Emission</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>