force-app/main/default/objects/Emission__c/fields/Emission_Factor__c.field-meta.xml
<CustomField>
    <fullName>Emission_Factor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Emission Factor</label>
    <referenceTo>Emission_Factor__c</referenceTo>
    <relationshipLabel>Emissions</relationshipLabel>
    <relationshipName>Emissions</relationshipName>
    <type>Lookup</type>
</CustomField>