force-app/main/default/objects/Emission__c/fields/Estimated_Emission__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Emission__c</fullName>
    <label>Estimated Emission</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>