force-app/main/default/objects/Emission__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <length>15</length>
    <type>Text</type>
</CustomField>